kustomize/base/generated/postgres/postgresql-ha/templates/pgpool/service.yaml
---
# Source: postgresql-ha/templates/pgpool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-postgresql-ha-pgpool
  namespace: "data"
  labels:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-ha-16.3.2
    app.kubernetes.io/component: pgpool
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "postgresql"
      port: 5432
      targetPort: postgresql
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/component: pgpool
