kustomize/base/generated/postgres/postgresql-ha/templates/pgpool/networkpolicy.yaml
---
# Source: postgresql-ha/templates/pgpool/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgres-postgresql-ha-pgpool
  namespace: "data"
  labels:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-ha-16.3.2
    app.kubernetes.io/component: pgpool
    role: data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: postgres
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: pgpool
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
